<resources>
    <string name="app_name">My Tasks</string>

    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="no_date">Task without deadline</string>

    <string name="save">Save</string>

    <string name="title_required">Title is required!</string>
    <string name="invalid_date">Date is invalid! Use: (00/00/0000)</string>
    <string name="invalid_time">Time is invalid! Use: (00:00)</string>
    <string name="read_error">Error to read data from Task</string>
    <string name="server_error">Not possible to connect to server</string>
    <string name="empty_list">No Tasks available.\nClick to button to add one</string>

    <string name="delete_title">Delete Task</string>
    <string name="delete_confirm">Sure you want to delete the task?</string>
    
    <string name="permission">Permission</string>
    <string name="notification_permission_rationale">App will send you notifications when new tasks are pending. </string>

    <string name="preferences">Configs</string>
    <string name="daily_notification">Daily Notifications</string>
    <string name="daily_notification_on">You\'ll receive a Daily Notification.</string>
    <string name="daily_notification_off">You\'ll not receive a Daily Notification.</string>

    <string name="date_format">Date Format</string>
    <string name="date_format_on">Full Format (00 de janeiro de 0000)</string>
    <string name="date_format_off">Short Format (00/00/0000)</string>

    <string name="mark_completed">Mark task as completed!</string>

    <string name="create_error">Error on Create the Task</string>
    <string name="update_error">Error on Update the Task</string>
    
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="create_account">Create Account</string>
    <string name="google_login">Google Account</string>
    <string name="empty_email">Please fill the e-mail</string>
    <string name="empty_pass">Please fill the password</string>
    <string name="account_created_fail">Error to create Account</string>
    <string name="login_fail">Error to Login</string>

    <string name="google_error">Error to connect to Google</string>
    <string name="firebase_error">Error to connect with Firebase</string>
</resources>