<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/permission">
        <SwitchPreferenceCompat
            android:key="daily_notification"
            android:summaryOff="@string/daily_notification_off"
            android:summaryOn="@string/daily_notification_on"
            android:title="@string/daily_notification"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/date_format">
        <SwitchPreferenceCompat
            android:key="date_format"
            android:title="@string/date_format"
            android:summaryOn="@string/date_format_on"
            android:summaryOff="@string/date_format_off"/>
    </PreferenceCategory>

</androidx.preference.PreferenceScreen>