<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutEmail"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="?android:colorBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:boxBackgroundColor="?android:colorBackground"
        app:passwordToggleEnabled="true"
        app:layout_constraintEnd_toEndOf="@id/layoutEmail"
        app:layout_constraintStart_toStartOf="@id/layoutEmail"
        app:layout_constraintTop_toBottomOf="@id/layoutEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingVertical="16dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="@id/layoutEmail"
        app:layout_constraintStart_toStartOf="@id/layoutEmail"
        app:layout_constraintTop_toBottomOf="@id/layoutPassword"
        />

    <Button
        android:id="@+id/btCreateAccount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingVertical="16dp"
        android:text="@string/create_account"
        app:layout_constraintEnd_toEndOf="@id/layoutEmail"
        app:layout_constraintStart_toStartOf="@id/layoutEmail"
        app:layout_constraintTop_toBottomOf="@id/btLogin"
        />

</androidx.constraintlayout.widget.ConstraintLayout>